--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,9 @@
     "angular": "^1.5.5",
     "jquery": "^3.1.0",
     "angular-material": "^1.0.8",
-    "videojs-sublime-skin": "^1.0.3",
-    "angular-scroll-animate": "^0.9.9"
+    "angular-scroll-animate": "^0.9.9",
+    "angular-scroll": "^1.0.2",
+    "angular-route": "^1.6.4"
   },
   "private": true
 }
